<?xml version="1.0" encoding="utf-8"?>
  <LinearLayout 
      		xmlns:android="http://schemas.android.com/apk/res/android"
      		android:id="@+id/LinearLayout01"
	        android:layout_height="fill_parent" 
	        android:layout_width="fill_parent" 
	        android:orientation="vertical" 
	        android:background="#ffffffff">	
	
	        <TableLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingRight="20dp" >
	                
        	            	<TableRow android:layout_height="wrap_content" 
	                        android:layout_width="wrap_content">

	                <LinearLayout
	                    android:layout_width="122dp"
	                    android:layout_height="36dp"
	                    android:gravity="center"
	                    android:textStyle="bold" >
	                </LinearLayout>

	                </TableRow>

	            <TableRow android:layout_width="wrap_content"
	            	     android:layout_height="wrap_content" 
	            	     android:gravity="center">

	            	     <ImageView
	            	     android:layout_width="199dp"
	            	     android:layout_height="55dp"
	            	     android:background="@drawable/logo"
	                     android:textStyle="bold" />
	             </TableRow>
	                
				 <TableRow android:layout_height="wrap_content" 
	                        android:layout_width="wrap_content" 
	                        android:gravity="center">
	                        <TextView android:layout_width="122dp"
									android:layout_height="36dp"
									
									android:textStyle="bold"
									android:gravity="center">
	                        </TextView>
	                </TableRow>

	             <TableRow
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:gravity="center" >

	                 <TextView
	                     android:id="@+id/unamelabel"
	                     android:layout_width="0dp"
	                     android:layout_height="wrap_content"
	                     android:layout_weight="1"
	                     android:gravity="center"
	                     android:text="@string/Username"
	                     android:textStyle="bold" >
	                 </TextView>

	                 <EditText
	                     android:id="@+id/username"
	                     android:layout_width="195dp"
	                     android:layout_height="wrap_content"
	                     android:inputType="text">
	                 </EditText>
	             </TableRow>
	                
	                <TableRow
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:gravity="center" >

	                    <TextView
	                        android:id="@+id/pwdlabel"
	                        android:layout_width="10dp"
	                        android:layout_height="wrap_content"
	                        android:layout_weight="1"
	                        android:gravity="center"
	                        android:text="@string/Password"
	                        android:textStyle="bold" >
	                    </TextView>

	                    <EditText
	                        android:id="@+id/password"
	                        android:layout_width="195dp"
	                        android:layout_height="wrap_content"
	                        android:inputType="textPassword"
	                        android:password="true">

	                        <!-- android:layout_toRightOf="@id/pwdlabel" -->
	                    </EditText>
	                </TableRow>
	                	                
	        </TableLayout>
	        <CheckBox android:layout_gravity="center_horizontal" 
	                  android:layout_height="wrap_content" 
	                  android:layout_width="wrap_content" 
	                  android:text="@string/Rememberme" 
	                  android:id="@+id/rememberme" 
	                  android:textColor="#13559C" 
	                  android:layout_marginTop="20dip">
	                  </CheckBox>

	        <LinearLayout
	            xmlns:android="http://schemas.android.com/apk/res/android"
	            android:id="@+id/LinearLayout02"
	            android:layout_width="fill_parent"
	            android:layout_height="104dp"
	            android:orientation="horizontal"
	            android:paddingLeft="15dp"
	            android:paddingRight="15dp" >

	            <Button
	                android:id="@+id/login_btn"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:layout_marginTop="10dip"
	                android:minWidth="140dp"
	                android:text="@string/Login" />

	            <Button
	                android:id="@+id/cancel_btn"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:layout_marginTop="10dip"
	                android:minWidth="140dp"
	                android:text="@string/Cancel" />
	        </LinearLayout>
            
</LinearLayout>